--- a/gcmapp/Base.lproj/Main.storyboard
+++ b/gcmapp/Base.lproj/Main.storyboard
@@ -1434,6 +1434,9 @@
                                                 <state key="normal" title="..." backgroundImage="numberCircle">
                                                     <color key="titleColor" red="0.050980392159999999" green="0.098039215690000001" blue="0.19215686269999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <segue destination="AQB-UJ-YKg" kind="showDetail" identifier="showMeasurementDetailFruit" id="3br-6d-OmL"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8wy-u7-K2e" userLabel="Outcomes-Total">
                                                 <rect key="frame" x="555" y="730" width="45" height="45"/>
@@ -1445,6 +1448,9 @@
                                                 <state key="normal" title="..." backgroundImage="numberCircle">
                                                     <color key="titleColor" red="0.050980392159999999" green="0.098039215690000001" blue="0.19215686269999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <segue destination="AQB-UJ-YKg" kind="showDetail" identifier="showMeasurementDetailOutcomes" id="xxz-fh-ea2"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VMQ-aS-Jig" userLabel="Other-Total">
                                                 <rect key="frame" x="555" y="1084" width="45" height="45"/>
@@ -1456,6 +1462,9 @@
                                                 <state key="normal" title="..." backgroundImage="numberCircle">
                                                     <color key="titleColor" red="0.050980392159999999" green="0.098039215690000001" blue="0.19215686269999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <segue destination="AQB-UJ-YKg" kind="showDetail" identifier="showMeasurementDetailOther" id="Xlj-Ya-rfu"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -2358,4 +2367,7 @@
         <image name="settings30" width="30" height="29"/>
         <image name="topShadow" width="275" height="35"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="eQf-IC-Rpf"/>
+    </inferredMetricsTieBreakers>
 </document>
