--- a/gcmapp/Base.lproj/Main.storyboard
+++ b/gcmapp/Base.lproj/Main.storyboard
@@ -1691,18 +1691,22 @@
                                             </variation>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KMc-Nl-8vL">
-                                            <rect key="frame" x="36" y="11" width="120" height="21"/>
+                                            <rect key="frame" x="36" y="11" width="226" height="21"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="120" id="5so-tg-6CU"/>
+                                                <constraint firstAttribute="width" constant="226" id="5so-tg-6CU"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Participants:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ndw-r6-6BF">
-                                            <rect key="frame" x="414" y="11" width="96" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Participants:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ndw-r6-6BF">
+                                            <rect key="frame" x="421" y="11" width="96" height="21"/>
                                             <constraints>
+                                                <constraint firstAttribute="width" constant="96" id="Gcs-lt-Rcd"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="96" id="Ljq-j1-eBU"/>
+                                                <constraint firstAttribute="height" constant="21" id="jBW-1y-wK7"/>
                                                 <constraint firstAttribute="width" constant="96" id="l4g-kY-CvG"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="yKE-WU-Fdc"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -1713,11 +1717,12 @@
                                                 </mask>
                                             </variation>
                                         </label>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ruI-f5-soX">
-                                            <rect key="frame" x="517" y="7" width="75" height="30"/>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ruI-f5-soX">
+                                            <rect key="frame" x="524" y="7" width="75" height="30"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="75" id="64r-jh-tjO"/>
+                                                <constraint firstAttribute="height" constant="30" id="AwL-J9-b6o"/>
                                                 <constraint firstAttribute="width" constant="75" id="R9O-gU-zIU"/>
+                                                <constraint firstAttribute="width" constant="75" id="SO8-Oc-dUU"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
@@ -1730,12 +1735,18 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="RYj-Hf-mzI" firstAttribute="leading" secondItem="wXn-Tq-PIQ" secondAttribute="leadingMargin" id="0vq-mQ-ceI"/>
-                                        <constraint firstItem="ruI-f5-soX" firstAttribute="leading" secondItem="Ndw-r6-6BF" secondAttribute="trailing" constant="7" id="6AI-jv-w31"/>
-                                        <constraint firstAttribute="centerY" secondItem="ruI-f5-soX" secondAttribute="centerY" id="AMn-pn-UlV"/>
+                                        <constraint firstItem="Ndw-r6-6BF" firstAttribute="top" secondItem="wXn-Tq-PIQ" secondAttribute="top" constant="11" id="2F5-hd-sxw"/>
+                                        <constraint firstItem="ruI-f5-soX" firstAttribute="top" secondItem="wXn-Tq-PIQ" secondAttribute="top" constant="7" id="3bo-vL-duu"/>
+                                        <constraint firstItem="ruI-f5-soX" firstAttribute="leading" secondItem="Ndw-r6-6BF" secondAttribute="trailing" constant="7" id="3fz-h6-4bC"/>
+                                        <constraint firstAttribute="bottom" secondItem="Ndw-r6-6BF" secondAttribute="bottom" constant="10" id="5Hn-bv-aUO"/>
                                         <constraint firstItem="RYj-Hf-mzI" firstAttribute="baseline" secondItem="KMc-Nl-8vL" secondAttribute="baseline" id="Iey-he-UBG"/>
+                                        <constraint firstItem="Ndw-r6-6BF" firstAttribute="top" secondItem="wXn-Tq-PIQ" secondAttribute="top" constant="11" id="IyX-bI-ddA"/>
                                         <constraint firstAttribute="centerY" secondItem="RYj-Hf-mzI" secondAttribute="centerY" id="Lxw-Dx-z3s"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="ruI-f5-soX" secondAttribute="trailing" id="QVs-mp-tdB"/>
-                                        <constraint firstItem="Ndw-r6-6BF" firstAttribute="baseline" secondItem="ruI-f5-soX" secondAttribute="baseline" id="sCJ-1a-T0e"/>
+                                        <constraint firstItem="ruI-f5-soX" firstAttribute="leading" secondItem="Ndw-r6-6BF" secondAttribute="trailing" constant="7" id="Pij-Tc-hbN"/>
+                                        <constraint firstAttribute="bottom" secondItem="Ndw-r6-6BF" secondAttribute="bottom" constant="10" id="SsN-6X-3m7"/>
+                                        <constraint firstAttribute="bottom" secondItem="ruI-f5-soX" secondAttribute="bottom" constant="5" id="amF-Fx-Afn"/>
+                                        <constraint firstItem="ruI-f5-soX" firstAttribute="leading" secondItem="Ndw-r6-6BF" secondAttribute="trailing" constant="7" id="och-hJ-f7Y"/>
+                                        <constraint firstAttribute="trailing" secondItem="ruI-f5-soX" secondAttribute="trailing" constant="1" id="qG6-h2-jK9"/>
                                         <constraint firstItem="KMc-Nl-8vL" firstAttribute="leading" secondItem="RYj-Hf-mzI" secondAttribute="trailing" constant="8" id="vOU-JL-7lc"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -1799,7 +1810,7 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Gi-gt-PKM">
+                                        <textField opaque="NO" clipsSubviews="YES" tag="-1" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Gi-gt-PKM">
                                             <rect key="frame" x="166" y="8" width="426" height="30"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
